--- a/index.html
+++ b/index.html
@@ -2,21 +2,77 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Магазин RezinaUzBot</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #f0f0f0, #ffffff); margin: 0; padding: 20px; }
-        h1 { text-align: center; color: #333; margin-bottom: 30px; }
-        .category { margin-top: 40px; }
-        .category h2 { border-bottom: 2px solid #4CAF50; padding-bottom: 5px; color: #4CAF50; }
-        .product { background-color: #fff; box-shadow: 0 4px 10px rgba(0,0,0,0.05); border-radius: 10px; padding: 15px; margin: 20px 0; transition: 0.3s; }
-        .product:hover { transform: scale(1.02); box-shadow: 0 6px 20px rgba(0,0,0,0.08); }
-        img { width: 100%; max-width: 250px; display: block; margin: 15px auto; border-radius: 10px; }
-        button { padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 8px; cursor: pointer; width: 100%; font-size: 16px; margin-top: 10px; transition: 0.3s; }
-        button:hover { background-color: #45a049; }
-        p { color: #555; font-size: 15px; }
-        .price { font-weight: bold; font-size: 18px; color: #222; margin-top: 5px; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #f9f9f9, #ffffff);
+            margin: 0;
+            padding: 15px;
+            max-width: 480px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 25px;
+        }
+        .category {
+            margin-top: 30px;
+        }
+        .category h2 {
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 5px;
+            color: #4CAF50;
+            margin-bottom: 15px;
+        }
+        .product {
+            background-color: #fff;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            border-radius: 12px;
+            padding: 12px;
+            margin-bottom: 20px;
+            transition: 0.2s;
+        }
+        .product:hover {
+            transform: scale(1.02);
+        }
+        img {
+            width: 100%;
+            max-width: 250px;
+            display: block;
+            margin: 12px auto;
+            border-radius: 10px;
+        }
+        button {
+            padding: 12px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 17px;
+            margin-top: 10px;
+            transition: 0.3s;
+        }
+        button:hover {
+            background-color: #3e9344;
+        }
+        p {
+            color: #555;
+            font-size: 14px;
+            margin: 8px 0;
+        }
+        .price {
+            font-weight: bold;
+            font-size: 17px;
+            color: #222;
+            margin-top: 8px;
+        }
     </style>
 </head>
 <body>
